force-app/main/default/objects/Audit_Log__c/Audit_Log__c.object-meta.xml
<CustomObject>
    <!-- Lookup (not Master-Detail) to Loan_Application__c: audit records must survive parent deletion for regulatory traceability and forensic analysis. -->
    <label>Audit Log</label>
    <nameField>
        <displayFormat>LOG-{0000000}</displayFormat>
        <label>Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Audit Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>