force-app/main/default/objects/Audit_Log__c/fields/Agent_Name__c.field-meta.xml
<CustomField>
    <fullName>Agent_Name__c</fullName>
    <label>Agent Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
        <value>
            <fullName>Document Verification Agent</fullName>
        </value>
        <value>
            <fullName>Financial Health Agent</fullName>
        </value>
        <value>
            <fullName>Credit Risk Agent</fullName>
        </value>
        <value>
            <fullName>Compliance Agent</fullName>
        </value>
        <value>
            <fullName>Decision Agent</fullName>
        </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>