force-app/main/default/objects/Audit_Log__c/fields/Event_Source__c.field-meta.xml
<CustomField>
    <fullName>Event_Source__c</fullName>
    <label>Event Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
        <value>
            <fullName>System</fullName>
        </value>
        <value>
            <fullName>User</fullName>
        </value>
        <value>
            <fullName>AI Agent</fullName>
        </value>
        <value>
            <fullName>Integration</fullName>
        </value>
        <value>
            <fullName>Customer</fullName>
        </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>