force-app/main/default/objects/Audit_Log__c/fields/Event_Type__c.field-meta.xml
<CustomField>
    <fullName>Event_Type__c</fullName>
    <label>Event Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
        <value>
            <fullName>Application Created</fullName>
        </value>
        <value>
            <fullName>Doc Uploaded</fullName>
        </value>
        <value>
            <fullName>Agent Run</fullName>
        </value>
        <value>
            <fullName>Decision Made</fullName>
        </value>
        <value>
            <fullName>Status Changed</fullName>
        </value>
        <value>
            <fullName>Officer Action</fullName>
        </value>
        <value>
            <fullName>Disbursement</fullName>
        </value>
        <value>
            <fullName>Integration Call</fullName>
        </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>