force-app/main/default/objects/Audit_Log__c/fields/Performed_By__c.field-meta.xml
<CustomField>
    <fullName>Performed_By__c</fullName>
    <label>Performed By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Audit Logs Performed</relationshipLabel>
    <relationshipName>Audit_Logs_Performed</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <type>Lookup</type>
</CustomField>